--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 <li><a class="page-scroll nounderline" href="{{ item.url | prepend: site.baseurl }}" class="page-link">{{ item.title }}</a>
         <ul class="sub-menu">
                 {% for subcategory in item.subcategories %}
-                <li><a class="page-scroll nounderline" href="{{ subcategory.suburl }}">{{ subcategory.subtitle }}</a></li>
+                <li><a class="page-scroll nounderline" href="{{ subcategory.suburl | prepend: site.baseurl}}">{{ subcategory.subtitle }}</a></li>
                 {% endfor %}
         </ul>
         {% else %}
